Fix expanding nav not visible on mobile

--- a/app/javascript/styles/honey_do/_navbar.scss
+++ b/app/javascript/styles/honey_do/_navbar.scss
@@ -8,6 +8,18 @@
   @include transition(all 0.3 ease);
   transition: all 0.3s ease;
 
+  &.navbar-expanded {
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: black;
+    @include background(linear-gradient(135deg, rgb(74, 13, 143) 0%, rgb(250, 42, 143) 100%));
+    @include box-shadow(0px 5px 23px 0px rgba(0, 0, 0, 0.1));
+
+    .navbar-toggler {
+      font-size: 0.9rem;
+    }
+  }
+
   &.parked {
     padding-top: 1em;
     padding-bottom: 1em;
